--- a/src/components/Tracker/Tracker.css
+++ b/src/components/Tracker/Tracker.css
@@ -9,8 +9,8 @@
   align-items: center;
   justify-content: flex-start;
   padding: 0 24px;
-  padding-top: 48px;
-  padding-bottom: 120px;
+  padding-top: 36px;
+  padding-bottom: 80px;
   background-color: var(--background);
 }
 
@@ -23,7 +23,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 24px;
+  margin-top: 12px;
   animation: fadeInUp 500ms ease 50ms forwards;
   opacity: 0;
 }
@@ -98,7 +98,7 @@
    ============================================================ */
 
 .tracker-footer {
-  margin-top: 40px;
+  margin-top: 28px;
   padding: 0;
   max-width: 340px;
   width: 100%;
@@ -746,7 +746,7 @@
 @media (min-width: 768px) {
   .tracker {
     padding-top: 48px;
-    padding-bottom: 100px;
+    padding-bottom: 80px;
   }
   
   .streak-num { font-size: 10rem; }
@@ -757,7 +757,7 @@
 @media (max-width: 480px) {
   .tracker {
     padding-top: 44px;
-    padding-bottom: 115px;
+    padding-bottom: 60px;
   }
   
   .streak-num { font-size: 7rem; }
@@ -786,7 +786,7 @@
 @media (max-height: 700px) {
   .tracker {
     padding-top: 32px;
-    padding-bottom: 105px;
+    padding-bottom: 75px;
   }
   
   .streak-num { font-size: 6rem; }
@@ -799,7 +799,7 @@
 @media (max-height: 600px) {
   .tracker {
     padding-top: 24px;
-    padding-bottom: 95px;
+    padding-bottom: 70px;
   }
   
   .streak-num { font-size: 5rem; }
